Corrected EULA property. This config.sh is unused, but it is updated here anyway.