@@ -2,21 +2,22 @@
 echo "Alternate Config file in use"
 # Main
 WORLD_NAME="world"
-MC_PATH=/home/minecraft
+MC_PATH=MINECRAFT_HOME_BASH_TOKEN
 SERVER_PATH=bin
 ONLINE_PATH="$MC_PATH"
 OFFLINE_NAME="$WORLD_NAME"-offline
 OFFLINE_PATH="$MC_PATH""/""$OFFLINE_NAME"
 USE_RAMDISK=0
 RAMDISK_PATH=/dev/shm/
-SCREEN_NAME=$(basename "minecraft_production")
+SCREEN_NAME=$(basename "MINECRAFT_HOME_BASH_TOKEN")"_""MINECRAFT_BUILD_NUMBER_TOKEN"
 MEMMAX=1536
 DISPLAY_ON_LAUNCH=0
 SERVER_OPTIONS="-XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSIncrementalPacing -XX:ParallelGCThreads=2 -XX:+AggressiveOpts -Djava.util.logging.config.file=logging.properties"
-
+EULA_FILE="$MC_PATH"/eula.txt
+SERVER_OPTIONS_DEBUG="-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5432 -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSIncrementalPacing -XX:ParallelGCThreads=2 -XX:+AggressiveOpts -Djava.util.logging.config.file=logging.properties"
 # Modifications
 SERVERMOD=1
-MODJAR="${MC_PATH}""/bin/""craftbukkit-CRAFTBUKKIT_VERSION_TOKEN-SNAPSHOT.jar"
+MODJAR="${MC_PATH}""/bin/""spigot-SPIGOT_VERSION_TOKEN.jar"
 RUNECRAFT=0
 MCMYADMIN=0
 
@@ -34,7 +35,7 @@ ALT_PATH=$MC_PATH/plugins
 
 # Logs
 LOG_TDIR=/var/www/html/minecraft/logs
-LOGS_DAYS=14
+LOGS_DAYS=33
 
 # Mapping
 CARTO_PATH=$MC_PATH/bin
@@ -45,9 +46,10 @@ MAP_CHANGES=1
 
 MCOVERVIEWER_PATH=$MC_PATH/bin
 MCOVERVIEWER_MAPS_PATH=$MAPS_PATH/Overview
+MCOVERVIEWER_FORCE_OPTIONS="--forcerender --config="$MC_PATH/bin/"overviewer_config.py"
 MCOVERVIEWER_OPTIONS="--config="$MC_PATH/bin/"overviewer_config.py"
-MCOVERVIEWER_POI_OPTIONS="--config="$MC_PATH/bin/"overviewer_config.py"
+MCOVERVIEWER_POI_OPTIONS="--genpoi --config="$MC_PATH/bin/"overviewer_config.py"
 PATH=$MC_PATH:$MC_PATH/bin:$BIOME_PATH:$PATH
-
+PYTHONPATH="$MC_PATH/bin"
 #       End of configuration
 
